--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ theme: jekyll-theme-cayman
 <html lang="en">
 <head>
 <meta charset='utf-8'>
-<title>site | сайт</title>
+<title>Как провести лето | сайт</title>
